<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.system.musicplayer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlist"
                style="@style/Category"
                android:background="@color/category"
                android:text="@string/category_playlist" />

            <TextView
                android:id="@+id/artist"
                style="@style/Category"
                android:background="@color/category"
                android:text="@string/category_artist" />

            <TextView
                android:id="@+id/songs"
                style="@style/Category"
                android:background="@color/category"
                android:text="@string/category_songs" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stream"
                style="@style/Category"
                android:background="@color/category"
                android:text="@string/category_Stream" />

            <TextView
                android:id="@+id/album"
                style="@style/Category"
                android:background="@color/category"
                android:text="@string/category_album" />

            <TextView
                android:id="@+id/genre"
                style="@style/Category"
                android:background="@color/category"
                android:text="@string/category_genre" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/nowplaying"
        style="@style/CategoryStyle"
        android:layout_alignParentBottom="true"
        android:background="@color/category"
        android:text="@string/category_nowPlaying" />

</RelativeLayout>
